; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_seccomp-util.c_seccomp_arch_to_string.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_seccomp-util.c_seccomp_arch_to_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"native\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"x86\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"x86-64\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"x32\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"arm\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"arm64\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"mips\00", align 1
@.str.7 = private unnamed_addr constant [7 x i8] c"mips64\00", align 1
@.str.8 = private unnamed_addr constant [11 x i8] c"mips64-n32\00", align 1
@.str.9 = private unnamed_addr constant [8 x i8] c"mips-le\00", align 1
@.str.10 = private unnamed_addr constant [10 x i8] c"mips64-le\00", align 1
@.str.11 = private unnamed_addr constant [14 x i8] c"mips64-le-n32\00", align 1
@.str.12 = private unnamed_addr constant [4 x i8] c"ppc\00", align 1
@.str.13 = private unnamed_addr constant [6 x i8] c"ppc64\00", align 1
@.str.14 = private unnamed_addr constant [9 x i8] c"ppc64-le\00", align 1
@.str.15 = private unnamed_addr constant [5 x i8] c"s390\00", align 1
@.str.16 = private unnamed_addr constant [6 x i8] c"s390x\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @seccomp_arch_to_string(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %22 [
    i32 136, label %5
    i32 129, label %6
    i32 128, label %7
    i32 130, label %8
    i32 143, label %9
    i32 144, label %10
    i32 142, label %11
    i32 141, label %12
    i32 140, label %13
    i32 139, label %14
    i32 138, label %15
    i32 137, label %16
    i32 135, label %17
    i32 134, label %18
    i32 133, label %19
    i32 132, label %20
    i32 131, label %21
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %23

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %23

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %23

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %23

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %23

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %23

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %23

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %23

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %23

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %23

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %23

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %23

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %23

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %23

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %23

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %23

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %23

22:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %23

23:                                               ; preds = %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %24 = load i8*, i8** %2, align 8
  ret i8* %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
